extended configuration form

--- a/src/com/kstenschke/clearcache/resources/forms/PluginConfiguration.form
+++ b/src/com/kstenschke/clearcache/resources/forms/PluginConfiguration.form
@@ -9,7 +9,89 @@
       <requestFocusEnabled value="true"/>
     </properties>
     <border type="none"/>
-    <children/>
+    <children>
+      <grid id="8695c" binding="TopPanel" layout-manager="GridLayoutManager" row-count="4" column-count="7" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints border-constraint="North"/>
+        <properties/>
+        <border type="none"/>
+        <children>
+          <component id="570a" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="6" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Clearing the cache will delete all files inside the selected directories (and contained sub directories) recursively."/>
+            </properties>
+          </component>
+          <hspacer id="cc6f1">
+            <constraints>
+              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <vspacer id="3783a">
+            <constraints>
+              <grid row="2" column="5" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <component id="19568" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="2" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Optionally, all contained directories and hidden files and folders can be deleted."/>
+            </properties>
+          </component>
+          <component id="df9bc" class="javax.swing.JCheckBox" binding="filesCheckBox" default-binding="true">
+            <constraints>
+              <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <enabled value="false"/>
+              <selected value="true"/>
+              <text value="Files"/>
+            </properties>
+          </component>
+          <component id="ef13f" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Delete:"/>
+            </properties>
+          </component>
+          <component id="ed8c5" class="javax.swing.JCheckBox" binding="directoriesCheckBox" default-binding="true">
+            <constraints>
+              <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Directories"/>
+            </properties>
+          </component>
+          <component id="94a9d" class="javax.swing.JCheckBox" binding="hiddenFilesAndDirectoriesCheckBox" default-binding="true">
+            <constraints>
+              <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Hidden files and directories"/>
+            </properties>
+          </component>
+          <hspacer id="f4cf0">
+            <constraints>
+              <grid row="3" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </hspacer>
+          <component id="4b4f6" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="1" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="The selected directories themselves are not being deleted."/>
+            </properties>
+          </component>
+        </children>
+      </grid>
+    </children>
   </grid>
   <inspectionSuppressions>
     <suppress inspection="NoLabelFor" id="5a62a"/>
