--- a/src/com/kstenschke/clearcache/resources/forms/PluginConfiguration.form
+++ b/src/com/kstenschke/clearcache/resources/forms/PluginConfiguration.form
@@ -39,7 +39,7 @@
               <grid row="2" column="0" row-span="1" col-span="5" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Optionally, all contained directories and hidden files and folders can be deleted."/>
+              <text value="Optionally, all contained directories and hidden files and directories can be deleted."/>
             </properties>
           </component>
           <component id="df9bc" class="javax.swing.JCheckBox" binding="filesCheckBox" default-binding="true">
