--- a/src/com/kstenschke/sweep/resources/forms/PluginConfiguration.form
+++ b/src/com/kstenschke/sweep/resources/forms/PluginConfiguration.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.kstenschke.clearcache.resources.forms.PluginConfiguration">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.kstenschke.sweep.resources.forms.PluginConfiguration">
   <grid id="27dc6" binding="rootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="889" height="434"/>
@@ -22,7 +22,7 @@
             </constraints>
             <properties>
               <icon value="general/information.png"/>
-              <text value="Clearing the cache will delete all files inside the selected directories (and contained sub directories) recursively."/>
+              <text value="Sweeping does delete all files inside the selected directories (and contained sub directories) recursively."/>
             </properties>
           </component>
           <hspacer id="cc6f1">
@@ -112,7 +112,7 @@
             </constraints>
             <properties>
               <icon value="general/information.png"/>
-              <text value="Files / folders containing any of these strings will not be deleted when clearing the cache."/>
+              <text value="Files / folders containing any of these strings will not be deleted when sweeping."/>
             </properties>
           </component>
           <component id="bbdb6" class="javax.swing.JLabel">
