--- a/src/com/kstenschke/sweep/resources/forms/SweepConfiguration.form
+++ b/src/com/kstenschke/sweep/resources/forms/SweepConfiguration.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.kstenschke.sweep.resources.forms.PluginConfiguration">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.kstenschke.sweep.resources.forms.SweepConfiguration">
   <grid id="27dc6" binding="rootPanel" layout-manager="BorderLayout" hgap="0" vgap="0">
     <constraints>
       <xy x="20" y="20" width="889" height="434"/>
